test/sema/positive/typevar_instantiation3.impala
fn myf(x: int, f:fn[A](A)->A, g: fn[A](A, fn[B](B)->B)->A) -> int {
    g[int](x, f)
}
