test/sema/negative/wrong_arg_num4.impala
fn f(x:int, g:fn[A](A)->A) -> int {
   g[int, bool](x)
}
